apps/test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-nginx
  namespace: test-app
spec:
  selector:
    matchLabels:
      app: test-app
  replicas: 2
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: test-app-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: test-app-volume
          configMap:
            name: test-app
