apps/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: test-app
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: test-app
